# kermut

./: .gitignore  README.md  environment.yml  environment_full.yml  proteingym_benchmark.py  pyproject.toml  setup.py
ProteinGym_outputs/MSE/: Summary_performance_DMS_substitutions_MSE.csv
ProteinGym_outputs/Spearman/: DMS_substitutions_Spearman_DMS_level_fold_random_5.csv
configs/: barplots.yaml  barplots_split.yaml  config.yaml  coves.yaml  evaluate_splits.yaml  gp_regression.yaml  proteingym_gp_regression.yaml  proteingym_gpr.yaml  regression.yaml  train_gp.yaml
configs/experiment/: regression_AAV.yaml  regression_BLAT_ECOLX.yaml  regression_GFP.yaml  regression_PARD3_10.yaml  regression_SPG1.yaml
configs/gp/: kermut.yaml  kermutB.yaml  kermutB2.yaml  kermutBD.yaml  kermutBH.yaml  kermutBHMatern.yaml  kermutBHNorm.yaml  kermutBH_add.yaml  kermutBH_oh.yaml  kermutD.yaml  kermutP.yaml  kermut_ablation.yaml  kermut_constant_mean.yaml  kermut_esmif1.yaml  (+22 more)
example_scripts/: benchmark_ablation.sh  benchmark_all_datasets.sh  benchmark_domain.sh  benchmark_multimutants.sh  benchmark_single_dataset.sh  generate_embeddings.sh  process_results.sh  zero_shot_scores.sh
exploration/: gp_exploration.ipynb  kernel_exploration.ipynb  make_gp_work.ipynb  pard3_exploration.ipynb
results/: merged_scores.csv
scripts/: example.sh  run_additive_model.sh  run_all_regression_experiments.sh  run_all_regression_single_dataset.sh  run_gp_experiments.sh  run_kermut_experiments.sh  run_msms.sh  run_oh_experiments.sh  run_proteinmpnn.sh  run_split_experiments.sh
src/: __init__.py
(+1252 files in other folders)
